fix minor alignment issues

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -181,6 +181,10 @@
     animation-delay: 1.15s;
   }
 
+  mat-tooltip-component { /*Material Override*/
+    font-size: 15px ! important;
+  }
+
   @-webkit-keyframes indeterminate {
     0% {
       left: -35%;
